# SGB_Project

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  test_config.py
configs/: base.yaml  dynamics.yaml  pipeline.yaml  reporting.yaml
configs/experiments/: experiment_1.yaml  experiment_2.yaml  experiment_3.yaml  experiment_4.yaml
configs/studies/: baseline_calibration.yaml  population_convergence.yaml  seed_convergence.yaml  sensitivity.yaml  time_convergence.yaml
outputs/calibration/baseline/: baseline_calibration_metadata.json  baseline_dimension_summary.csv  baseline_seed_dimension_means.csv  (+3 more)
outputs/final/: pipeline_run.json
outputs/raw/: exp1_summary_by_seed.csv  exp2_summary_by_seed.csv  exp3_results.csv  exp4_results.csv
outputs/tables/: table2_framework_comparison.csv  table3_propagation_metrics.csv  table4_recommended_threshold.csv  table5_resilience_efficiency_summary.csv
sgb/: agents.py  calibration.py  check_convergence.py  cli.py  config.py  config.yaml  convergence.py  convergence_utils.py  dimensions.py  distributions.py  dynamics.py  experiments.py  frameworks.py  metrics.py  model.py  perturbations.py  pipeline.py  reporting.py  sensitivity.py  visualize.py
synthetic_governance_benchmark.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_agents.py  test_calibration.py  test_config.py  test_convergence.py  test_dimensions.py  test_distributions.py  test_dynamics.py  test_experiments.py  test_frameworks.py  test_model.py  test_perturbations.py  test_pipeline.py  test_reporting.py  test_sensitivity.py
